feat: 多國語系切換鈕
1. 在Navbar旁新增語系切換鈕
2. 切換後刷新Animation

issue #1

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -814,7 +814,8 @@
 			}
 
 			#nav > ul > li > a,
-			#nav > ul > li > span
+			#nav > ul > li > span,
+			#nav > ul > li > div
 			{
 				display: block;
 				margin-left: 0.7em;
