--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -900,6 +900,10 @@
 		color: rgba(255,255,255,.7);
 	}
 	
+	#lastUpdate
+	{
+		text-align: right;
+	}
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
